package toYadoms;

message SetPluginState {
	enum EPluginState {
		kUnknown = 0; kError = 1; kStopped = 2; kRunning = 3; kCustom = 4;
	}
	required EPluginState pluginState = 1;
	optional string customMessageId = 2;
}

message ConfigurationRequest {
}

message BindingQueryAnswer {
	required bool success = 1;
	required string result = 2;
}

message msg {
	oneof OneOf {
		SetPluginState pluginState = 1;
		ConfigurationRequest configurationRequest = 2;
		BindingQueryAnswer bindingQueryAnswer = 3;
	}
}
